Monitoring-K8scluster-prometheus-grafana/vpc.tf
#####################
### VPC #########
###################

resource "aws_vpc" "container-vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "container_vpc"
  }
}
